2008-08-30  Glenn Morris  <rgm@gnu.org>

	* frame.c (Fmodify_frame_parameters): Doc fix.

2008-08-30  Eli Zaretskii  <eliz@gnu.org>

	* w32.c (init_user_info): Allocate buf[] with xmalloc using the size
	needed by GetTokenInformation.
	(w32_system_process_attributes): Check return values of all system
	APIs.

	* msdos.c (IT_display_cursor): Write "CURSOR ON/OFF" to termscript
	only when the state changes.
	(IT_update_begin, IT_update_end): Add termscript trace.

	* w16select.c (Fw16_set_clipboard_data): Don't encode text if
	clipboard is unavailable.  Set dst to NULL if it doesn't point to
	malloc'ed data.
	(Fw16_get_clipboard_data): Initialize htext to NULL, to avoid
	passing random values to xfree.

	* dispnew.c (init_display): Set `tty's association in frame's
	parameters alist to the name of the terminal device, if that is
	known.

2008-08-29  Jason Rumney  <jasonr@gnu.org>

	* w32uniscribe.c (uniscribe_check_otf): Don't fallback on DFLT script.

2008-08-29  Eli Zaretskii  <eliz@gnu.org>

	* composite.c (fill_gstring_body): Avoid compiler warnings.

	* font.c (font_fill_lglyph_metrics): Use EMACS_INT in
	LGLYPH_SET_CODE to avoid compiler warnings.

	* makefile.w32-in ($(BLD)/w32uniscribe.$(O)): Depend on composite.h

	* composite.h (LGLYPH_SET_CODE): Cast `val' to EMACS_INT.

	* w32uniscribe.c (uniscribe_shape): Shut up compiler warning in
	LGLYPH_SET_CODE.

2008-08-29  Kenichi Handa  <handa@m17n.org>

	* fileio.c (report_file_error): Don't downcase the first character
	of errstring if it is still unibyte.

2008-08-29  Kenichi Handa  <handa@m17n.org>

	These changes are to re-implement the automatic composition so
	that it doesn't use text properties.

	* Makefile.in (ftfont.o): Depend on composite.h.
	(composite.o): Depend dispextern.h, font.h, frame, and window.h.

	* character.h (Vunicode_category_table): Extern it.

	* character.c (Vunicode_category_table): New variable.
	(syms_of_character): DEFVAR_LISP Vunicode_category_table.
